queries adjusted, nav jumping issue fixed, tooltips made smaller

--- a/dev/styles/_global.scss
+++ b/dev/styles/_global.scss
@@ -49,7 +49,7 @@ html {
 
 // wrappers
 .wrapper--max {
-    max-width: 1200px;
+    max-width: 1250px;
     margin: 0 auto;
 }
 
@@ -70,6 +70,7 @@ html {
 body {
     background: $white;
     padding: 1px;
+     overflow-wrap: break-word; //for smaller screen size + publication/species names
 }
 
 .fadeInBody {
@@ -150,11 +151,11 @@ h3 {
 
 .button-global {
     padding: 6px 10px;
-    font-variant: small-caps;
+    text-transform: uppercase;
     transition: $globalTransition;
-    @include font-size-value(20.5);
+    @include font-size-value(15);
     color: $black;
-    margin-top: 5px;
+    margin-top: 8px;
     display: inline-block;
     text-align: center;
     position: relative;
@@ -207,17 +208,18 @@ h3 {
 
 .tooltipText {
     display: none;
-    min-width: 100px;
+    min-width: 90px;
     background-color: $black;
     color: $white;
     text-align: center;
-    padding: 5px 0px;
+    padding: 3px;
     position: absolute;
     z-index: 5;
     right: 0;
     bottom: -46px;
     border-radius: 3px;
     @include fade-in-effect(0.4s, 0.25s);
+    @include font-size-value(15);
 }
 
 .tooltipText::after {
@@ -237,19 +239,19 @@ h3 {
 }
 
 // media queries
-@media (max-width: 1410px) { 
+@media (max-width: 1450px) { 
     .wrapper--inner,  .wrapper--inner-no-margin {
     max-width: 85%;
     }
 }
 
-@media (max-width: 1360px) { 
+@media (max-width: 1395px) { 
     .wrapper--inner,  .wrapper--inner-no-margin {
     max-width: 78%;
     }
 }
 
-@media (max-width: 1279px) { 
+@media (max-width: 1305px) { 
     .wrapper--inner,  .wrapper--inner-no-margin {
     max-width: 70%;
     }
